# tlm-test

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  canSetup.sh  docker-compile.sh  importAll.sh  install.sh
.github/workflows/: compile.yml
Protobuffer/: compile  devices.proto
inc/: browse.h  camera.h  can.h  console.h  file_transfer.h  gps.h  gps_logger.h  inverter.h  loads.h  report.h  serial.h  utils.h
inc/connection/: connection.h  ws_connection.h  zmq_connection.h
inc/state_machines/: SharedData.h  fsm_gps_logger.h  fsm_telemetry.h
inc/state_machines/class_implementation/: Fault.h  StateMachine.h
python/: browseTerminal.py  csv_to_mat.py  requirements.txt  zip_and_move.py  zip_logs.py
python/influx_pusher/: .env  influx_pusher.py  requirements.txt
scripts/: README.md
scripts/csv/: csv.cpp
scripts/log_player/: log_player.cpp  log_player.h
scripts/port/: port_simulator.cpp  reader.cpp  share.cpp
scripts/telemetry/: main.cpp  main.h
scripts/telemetry_old/: main.cpp  telemetry_sm.cpp  telemetry_sm.h
scripts/testCan/: main.cpp  main.h
scripts/testFT/: test.cpp
scripts/testGPS/: main.cpp
scripts/testWS/: test.cpp
scripts/testZMQ/: test.cpp
services/: gps_port.service  telemetry.service  telemetry_server.service
src/: browse.cpp  camera.cpp  can.cpp  console.cpp  file_transfer.cpp  gps.cpp  gps_logger.cpp  inverter.cpp  loads.cpp  report.cpp  serial.cpp  utils.cpp
src/connection/: connection.cpp  ws_connection.cpp  zmq_connection.cpp
src/state_machines/: SharedData.cpp  fsm_gps_logger.cpp  fsm_telemetry.cpp
src/state_machines/class_implementation/: Fault.cpp  StateMachine.cpp
ubx_configurations/: heading-chip-backup.txt  heading-chip.txt  heading.txt  rover.txt
